@@ -1,3 +1,4 @@
+ -- Add optional pedantic SIP checking for Pingtel
  -- Allow extension names, include context, switch to use global vars.
  -- Allow variables in extensions.conf to reference previously defined ones
  -- Merge voicemail enhancements (app_voicemail2)
